tests/diagnostics/cases/types/10_too_few_arguments.home
// Wrong number of arguments: function expects two, only one supplied.
fn add(a: i32, b: i32) -> i32 { return a + b }

fn main() {
    let v = add(1)
}
